--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -39,104 +43,120 @@
     </header>
 
     <main>
-      <section class="hero">
+      <section class="section-hero">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="hero-btn">Замовити послугу</button>
       </section>
 
       <section class="section-features">
-        <h2 class="visually-hidden">Переваги</h2>
-        <ul class="features-list">
-          <li>
-            <h3 class="featurs-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="featurs-text">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="featurs-title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="featurs-text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="featurs-title">ПЛАНУВАННЯ</h3>
-            <p class="featurs-text">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="featurs-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="featurs-text">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Переваги</h2>
+          <ul class="features-list">
+            <li>
+              <h3 class="featurs-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="featurs-text">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li>
+              <h3 class="featurs-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="featurs-text">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li>
+              <h3 class="featurs-title">ПЛАНУВАННЯ</h3>
+              <p class="featurs-text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li>
+              <h3 class="featurs-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="featurs-text">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="section-skill">
-        <h2 class="skill-title">Чим ми займаємося</h2>
+        <div class="container">
+          <h2 class="skill-title">Чим ми займаємося</h2>
 
-        <ul class="section-icon">
-          <li>
-            <img src="./image/img.jpg" alt="image" width="370" height="294" />
-          </li>
-          <li>
-            <img src="./image/img1.jpg" alt="image" width="370" height="294" />
-          </li>
-          <li>
-            <img src="./image/img2.jpg" alt="image" width="370" height="294" />
-          </li>
-        </ul>
+          <ul class="section-icon">
+            <li>
+              <img src="./image/img.jpg" alt="image" width="370" height="294" />
+            </li>
+            <li>
+              <img
+                src="./image/img1.jpg"
+                alt="image"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="./image/img2.jpg"
+                alt="image"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="section-team">
-        <h2 class="section-team-title">Наша команда</h2>
-        <ul class="list-team">
-          <li>
-            <img
-              src="./image/person.jpg"
-              alt="Designer"
-              width="270"
-              height="260"
-            />
-            <h3 class="title-team">Ігор Дем'яненко</h3>
-            <p class="profession">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./image/person1.jpg"
-              alt="Developer"
-              width="270"
-              height="260"
-            />
-            <h3 class="title-team">Ольга Рєпіна</h3>
-            <p class="profession">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./image/person2.jpg"
-              alt="Marketing"
-              width="270"
-              height="260"
-            />
-            <h3 class="title-team">Микола Тарасов</h3>
-            <p class="profession">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./image/person3.jpg"
-              alt="UiDesigner"
-              width="270"
-              height="260"
-            />
-            <h3 class="title-team">Михайло Єрмаков</h3>
-            <p class="profession">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-team-title">Наша команда</h2>
+          <ul class="list-team">
+            <li>
+              <img
+                src="./image/person.jpg"
+                alt="Designer"
+                width="270"
+                height="260"
+              />
+              <h3 class="title-team">Ігор Дем'яненко</h3>
+              <p class="profession">Product Designer</p>
+            </li>
+            <li>
+              <img
+                src="./image/person1.jpg"
+                alt="Developer"
+                width="270"
+                height="260"
+              />
+              <h3 class="title-team">Ольга Рєпіна</h3>
+              <p class="profession">Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                src="./image/person2.jpg"
+                alt="Marketing"
+                width="270"
+                height="260"
+              />
+              <h3 class="title-team">Микола Тарасов</h3>
+              <p class="profession">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./image/person3.jpg"
+                alt="UiDesigner"
+                width="270"
+                height="260"
+              />
+              <h3 class="title-team">Михайло Єрмаков</h3>
+              <p class="profession">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
