--- a/index.html
+++ b/index.html
@@ -19,27 +19,31 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-nav">
-        <a href="./index.html" class="logo"
-          ><span class="accent">Web</span>Studio</a
-        >
-
-        <ul class="site-nav">
-          <li><a href="" class="link current">Студія</a></li>
-          <li><a href="./portfolio.html" class="link-nav">Портфоліо</a></li>
-          <li><a href="" class="link-nav">Контакти</a></li>
-        </ul>
-      </nav>
-      <ul class="contacts">
-        <li>
-          <a href="mailto:info@devstudio.com" class="connect"
-            >info@devstudio.com</a
+      <div class="container">
+        <nav class="header-nav">
+          <a href="./index.html" class="logo"
+            ><span class="accent">Web</span>Studio</a
           >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="connect">+38 096 111 11 11</a>
-        </li>
-      </ul>
+  
+          <ul class="site-nav">
+            <li><a href="" class="link current">Студія</a></li>
+            <li><a href="./portfolio.html" class="link-nav">Портфоліо</a></li>
+            <li><a href="" class="link-nav">Контакти</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="container">
+        <ul class="contacts">
+          <li>
+            <a href="mailto:info@devstudio.com" class="connect"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="connect">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </div>  
     </header>
 
     <main>
