--- a/portfolio.html
+++ b/portfolio.html
@@ -31,8 +31,7 @@
             <li><a href="" class="link-nav">Контакти</a></li>
           </ul>
         </nav>
-      </div>
-      <div class="container">
+
         <ul class="contacts">
           <li>
             <a href="mailto:info@devstudio.com" class="connect"
@@ -48,153 +47,161 @@
 
     <main>
       <section class="section-filtr">
-        <h1 class="visually-hidden">Фільтри</h1>
-        <ul class="filtr-btns">
-          <li><button type="button" class="btns">Усі</button></li>
-          <li><button type="button" class="btns">Веб-сайти</button></li>
-          <li><button type="button" class="btns">Додатки</button></li>
-          <li><button type="button" class="btns">Дизайн</button></li>
-          <li><button type="button" class="btns">Маркетинг</button></li>
-        </ul>
+        <div class="container">
+          <h1 class="visually-hidden">Фільтри</h1>
+          <ul class="filtr-btns">
+            <li><button type="button" class="btns">Усі</button></li>
+            <li><button type="button" class="btns">Веб-сайти</button></li>
+            <li><button type="button" class="btns">Додатки</button></li>
+            <li><button type="button" class="btns">Дизайн</button></li>
+            <li><button type="button" class="btns">Маркетинг</button></li>
+          </ul>
+        </div>
 
-        <ul class="filtr-works">
-          <li>
-            <a href="" class="link-filtr"
-              ><img
-                src="./image/proj1.jpg"
-                alt="Превью проекту"
-                width="370"
-                height="294"
-              />
-              <h2 class="filtr-title">Технокряк</h2>
-              <p class="filtr-text">Веб-сайт</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link-filtr"
-              ><img
-                src="./image/proj2.jpg"
-                alt="Превью проекту"
-                width="370"
-                height="294"
-              />
-              <h2 class="filtr-title">Постер New Orlean vs Golden Star</h2>
-              <p class="filtr-text">Дизайн</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link-filtr"
-              ><img
-                src="./image/proj3.jpg"
-                alt="Превью проекту"
-                width="370"
-                height="294"
-              />
-              <h2 class="filtr-title">Ресторан Seafood</h2>
-              <p class="filtr-text">Додаток</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link-filtr"
-              ><img
-                src="./image/proj4.jpg"
-                alt="Превью проекту"
-                width="370"
-                height="294"
-              />
-              <h2 class="filtr-title">Проєкт Prime</h2>
-              <p class="filtr-text">Маркетинг</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link-filtr"
-              ><img
-                src="./image/proj5.jpg"
-                alt="Превью проекту"
-                width="370"
-                height="294"
-              />
-              <h2 class="filtr-title">Проєкт Boxes</h2>
-              <p class="filtr-text">Додаток</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link-filtr"
-              ><img
-                src="./image/proj6.jpg"
-                alt="Превью проекту"
-                width="370"
-                height="294"
-              />
-              <h2 class="filtr-title">Inspiration has no Borders</h2>
-              <p class="filtr-text">Веб-сайт</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link-filtr"
-              ><img
-                src="./image/proj7.jpg"
-                alt="Превью проекту"
-                width="370"
-                height="294"
-              />
-              <h2 class="filtr-title">Видання Limited Edition</h2>
-              <p class="filtr-text">Дизайн</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link-filtr"
-              ><img
-                src="./image/proj8.jpg"
-                alt="Превью проекту"
-                width="370"
-                height="294"
-              />
-              <h2 class="filtr-title">Проєкт LAB</h2>
-              <p class="filtr-text">Маркетинг</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link-filtr"
-              ><img
-                src="./image/proj9.jpg"
-                alt="Превью проекту"
-                width="370"
-                height="294"
-              />
-              <h2 class="filtr-title">Growing Business</h2>
-              <p class="filtr-text">Додаток</p></a
-            >
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="filtr-works">
+            <li>
+              <a href="" class="link-filtr"
+                ><img
+                  src="./image/proj1.jpg"
+                  alt="Превью проекту"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="filtr-title">Технокряк</h2>
+                <p class="filtr-text">Веб-сайт</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link-filtr"
+                ><img
+                  src="./image/proj2.jpg"
+                  alt="Превью проекту"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="filtr-title">Постер New Orlean vs Golden Star</h2>
+                <p class="filtr-text">Дизайн</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link-filtr"
+                ><img
+                  src="./image/proj3.jpg"
+                  alt="Превью проекту"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="filtr-title">Ресторан Seafood</h2>
+                <p class="filtr-text">Додаток</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link-filtr"
+                ><img
+                  src="./image/proj4.jpg"
+                  alt="Превью проекту"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="filtr-title">Проєкт Prime</h2>
+                <p class="filtr-text">Маркетинг</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link-filtr"
+                ><img
+                  src="./image/proj5.jpg"
+                  alt="Превью проекту"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="filtr-title">Проєкт Boxes</h2>
+                <p class="filtr-text">Додаток</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link-filtr"
+                ><img
+                  src="./image/proj6.jpg"
+                  alt="Превью проекту"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="filtr-title">Inspiration has no Borders</h2>
+                <p class="filtr-text">Веб-сайт</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link-filtr"
+                ><img
+                  src="./image/proj7.jpg"
+                  alt="Превью проекту"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="filtr-title">Видання Limited Edition</h2>
+                <p class="filtr-text">Дизайн</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link-filtr"
+                ><img
+                  src="./image/proj8.jpg"
+                  alt="Превью проекту"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="filtr-title">Проєкт LAB</h2>
+                <p class="filtr-text">Маркетинг</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link-filtr"
+                ><img
+                  src="./image/proj9.jpg"
+                  alt="Превью проекту"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="filtr-title">Growing Business</h2>
+                <p class="filtr-text">Додаток</p></a
+              >
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="/" class="footer-logo"><span class="accent">Web</span>Studio</a>
-      <address class="address">
-        <ul class="address-list">
-          <li>
-            <a
-              href="https://www.google.com.ua/maps/"
-              class="address-nav"
-              target="_blank"
-              rel="noreferrer noopener"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="address-contact"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="address-contact"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="/" class="footer-logo"
+          ><span class="accent">Web</span>Studio</a
+        >
+        <address class="address">
+          <ul class="address-list">
+            <li>
+              <a
+                href="https://www.google.com.ua/maps/"
+                class="address-nav"
+                target="_blank"
+                rel="noreferrer noopener"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="address-contact"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="address-contact"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
