--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container main-nav">
         <nav class="header-nav">
           <a href="./index.html" class="logo"
             ><span class="accent">Web</span>Studio</a
