--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <header class="header">
       <div class="container main-nav">
         <nav class="header-nav">
-          <a href="./index.html" class="logo"
+          <a href="./index.html" class="logo main-nav"
             ><span class="accent">Web</span>Studio</a
           >
 
