--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
           <ul class="list-team">
             <li>
               <img
+                class="foto"
                 src="./image/person.jpg"
                 alt="Designer"
                 width="270"
@@ -130,6 +131,7 @@
             </li>
             <li>
               <img
+                class="foto"
                 src="./image/person1.jpg"
                 alt="Developer"
                 width="270"
@@ -140,6 +142,7 @@
             </li>
             <li>
               <img
+                class="foto"
                 src="./image/person2.jpg"
                 alt="Marketing"
                 width="270"
@@ -150,6 +153,7 @@
             </li>
             <li>
               <img
+                class="foto"
                 src="./image/person3.jpg"
                 alt="UiDesigner"
                 width="270"
