--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
 
     <main>
       <section class="section-filtr">
-        <div class="container">
+        <div class="container main">
           <h1 class="visually-hidden">Фільтри</h1>
           <ul class="filtr-btns">
             <li><button type="button" class="btns">Усі</button></li>
@@ -59,8 +59,8 @@
         </div>
 
         <div class="container">
-          <ul class="filtr-works">
-            <li>
+          <ul class="filtr-works filtr-container">
+            <li class="item">
               <a href="" class="link-filtr"
                 ><img
                   src="./image/proj1.jpg"
@@ -72,7 +72,7 @@
                 <p class="filtr-text">Веб-сайт</p></a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link-filtr"
                 ><img
                   src="./image/proj2.jpg"
@@ -84,7 +84,7 @@
                 <p class="filtr-text">Дизайн</p></a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link-filtr"
                 ><img
                   src="./image/proj3.jpg"
@@ -96,7 +96,7 @@
                 <p class="filtr-text">Додаток</p></a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link-filtr"
                 ><img
                   src="./image/proj4.jpg"
@@ -108,7 +108,7 @@
                 <p class="filtr-text">Маркетинг</p></a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link-filtr"
                 ><img
                   src="./image/proj5.jpg"
@@ -120,7 +120,7 @@
                 <p class="filtr-text">Додаток</p></a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link-filtr"
                 ><img
                   src="./image/proj6.jpg"
@@ -132,7 +132,7 @@
                 <p class="filtr-text">Веб-сайт</p></a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link-filtr"
                 ><img
                   src="./image/proj7.jpg"
@@ -144,7 +144,7 @@
                 <p class="filtr-text">Дизайн</p></a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link-filtr"
                 ><img
                   src="./image/proj8.jpg"
@@ -156,7 +156,7 @@
                 <p class="filtr-text">Маркетинг</p></a
               >
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link-filtr"
                 ><img
                   src="./image/proj9.jpg"
