--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header line-shadow">
       <div class="container main-nav">
         <nav class="header-nav">
           <a href="./index.html" class="logo main-nav"
