--- a/index.html
+++ b/index.html
@@ -126,8 +126,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="title-team">Ігор Дем'яненко</h3>
-              <p class="profession">Product Designer</p>
+              <div class="team-text">
+                <h3 class="title-team">Ігор Дем'яненко</h3>
+                <p class="profession">Product Designer</p>
+              </div>
             </li>
             <li>
               <img
@@ -137,8 +139,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="title-team">Ольга Рєпіна</h3>
-              <p class="profession">Frontend Developer</p>
+              <div class="team-text">
+                <h3 class="title-team">Ольга Рєпіна</h3>
+                <p class="profession">Frontend Developer</p>
+              </div>
             </li>
             <li>
               <img
@@ -148,8 +152,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="title-team">Микола Тарасов</h3>
-              <p class="profession">Marketing</p>
+              <div class="team-text">
+                <h3 class="title-team">Микола Тарасов</h3>
+                <p class="profession">Marketing</p>
+              </div>
             </li>
             <li>
               <img
@@ -159,8 +165,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="title-team">Михайло Єрмаков</h3>
-              <p class="profession">UI Designer</p>
+              <div class="team-text">
+                <h3 class="title-team">Михайло Єрмаков</h3>
+                <p class="profession">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
