--- a/portfolio.html
+++ b/portfolio.html
@@ -63,110 +63,137 @@
             <li class="item">
               <a href="" class="link-filtr"
                 ><img
+                  class="image"
                   src="./image/proj1.jpg"
                   alt="Превью проекту"
                   width="370"
                   height="294"
                 />
-                <h2 class="filtr-title">Технокряк</h2>
-                <p class="filtr-text">Веб-сайт</p></a
-              >
+                <div class="filtr-item">
+                  <h2 class="filtr-title">Технокряк</h2>
+                  <p class="filtr-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="link-filtr"
                 ><img
+                  class="image"
                   src="./image/proj2.jpg"
                   alt="Превью проекту"
                   width="370"
                   height="294"
                 />
-                <h2 class="filtr-title">Постер New Orlean vs Golden Star</h2>
-                <p class="filtr-text">Дизайн</p></a
-              >
+                <div class="filtr-item">
+                  <h2 class="filtr-title">Постер New Orlean vs Golden Star</h2>
+                  <p class="filtr-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="link-filtr"
                 ><img
+                  class="image"
                   src="./image/proj3.jpg"
                   alt="Превью проекту"
                   width="370"
                   height="294"
                 />
-                <h2 class="filtr-title">Ресторан Seafood</h2>
-                <p class="filtr-text">Додаток</p></a
-              >
+                <div class="filtr-item">
+                  <h2 class="filtr-title">Ресторан Seafood</h2>
+                  <p class="filtr-text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="link-filtr"
                 ><img
+                  class="image"
                   src="./image/proj4.jpg"
                   alt="Превью проекту"
                   width="370"
                   height="294"
                 />
-                <h2 class="filtr-title">Проєкт Prime</h2>
-                <p class="filtr-text">Маркетинг</p></a
-              >
+                <div class="filtr-item">
+                  <h2 class="filtr-title">Проєкт Prime</h2>
+                  <p class="filtr-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="link-filtr"
                 ><img
+                  class="image"
                   src="./image/proj5.jpg"
                   alt="Превью проекту"
                   width="370"
                   height="294"
                 />
-                <h2 class="filtr-title">Проєкт Boxes</h2>
-                <p class="filtr-text">Додаток</p></a
-              >
+                <div class="filtr-item">
+                  <h2 class="filtr-title">Проєкт Boxes</h2>
+                  <p class="filtr-text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="link-filtr"
                 ><img
+                  class="image"
                   src="./image/proj6.jpg"
                   alt="Превью проекту"
                   width="370"
                   height="294"
                 />
-                <h2 class="filtr-title">Inspiration has no Borders</h2>
-                <p class="filtr-text">Веб-сайт</p></a
-              >
+                <div class="filtr-item">
+                  <h2 class="filtr-title">Inspiration has no Borders</h2>
+                  <p class="filtr-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="link-filtr"
                 ><img
+                  class="image"
                   src="./image/proj7.jpg"
                   alt="Превью проекту"
                   width="370"
                   height="294"
                 />
-                <h2 class="filtr-title">Видання Limited Edition</h2>
-                <p class="filtr-text">Дизайн</p></a
-              >
+                <div class="filtr-item">
+                  <h2 class="filtr-title">Видання Limited Edition</h2>
+                  <p class="filtr-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="link-filtr"
                 ><img
+                  class="image"
                   src="./image/proj8.jpg"
                   alt="Превью проекту"
                   width="370"
                   height="294"
                 />
-                <h2 class="filtr-title">Проєкт LAB</h2>
-                <p class="filtr-text">Маркетинг</p></a
-              >
+                <div class="filtr-item">
+                  <h2 class="filtr-title">Проєкт LAB</h2>
+                  <p class="filtr-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="item">
               <a href="" class="link-filtr"
                 ><img
+                  class="image"
                   src="./image/proj9.jpg"
                   alt="Превью проекту"
                   width="370"
                   height="294"
                 />
-                <h2 class="filtr-title">Growing Business</h2>
-                <p class="filtr-text">Додаток</p></a
-              >
+                <div class="filtr-item">
+                  <h2 class="filtr-title">Growing Business</h2>
+                  <p class="filtr-text">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
