--- a/index.html
+++ b/index.html
@@ -118,9 +118,8 @@
         <div class="container">
           <h2 class="section-team-title">Наша команда</h2>
           <ul class="list-team">
-            <li>
+            <li class="list">
               <img
-                class="foto"
                 src="./image/person.jpg"
                 alt="Designer"
                 width="270"
@@ -131,9 +130,8 @@
                 <p class="profession">Product Designer</p>
               </div>
             </li>
-            <li>
+            <li class="list">
               <img
-                class="foto"
                 src="./image/person1.jpg"
                 alt="Developer"
                 width="270"
@@ -144,9 +142,8 @@
                 <p class="profession">Frontend Developer</p>
               </div>
             </li>
-            <li>
+            <li class="list">
               <img
-                class="foto"
                 src="./image/person2.jpg"
                 alt="Marketing"
                 width="270"
@@ -157,9 +154,8 @@
                 <p class="profession">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="list">
               <img
-                class="foto"
                 src="./image/person3.jpg"
                 alt="UiDesigner"
                 width="270"
