--- a/portfolio.html
+++ b/portfolio.html
@@ -50,20 +50,29 @@
         <div class="container main">
           <h1 class="visually-hidden">Фільтри</h1>
           <ul class="filtr-btns">
-            <li><button type="button" class="btns">Усі</button></li>
-            <li><button type="button" class="btns">Веб-сайти</button></li>
-            <li><button type="button" class="btns">Додатки</button></li>
-            <li><button type="button" class="btns">Дизайн</button></li>
-            <li><button type="button" class="btns">Маркетинг</button></li>
+            <li class="list-item">
+              <button type="button" class="btns">Усі</button>
+            </li>
+            <li class="list-item">
+              <button type="button" class="btns">Веб-сайти</button>
+            </li>
+            <li class="list-item">
+              <button type="button" class="btns">Додатки</button>
+            </li>
+            <li class="list-item">
+              <button type="button" class="btns">Дизайн</button>
+            </li>
+            <li class="list-item">
+              <button type="button" class="btns">Маркетинг</button>
+            </li>
           </ul>
         </div>
 
         <div class="container">
-          <ul class="filtr-works filtr-container">
+          <ul class="filtr-works">
             <li class="item">
               <a href="" class="link-filtr"
                 ><img
-                  class="image"
                   src="./image/proj1.jpg"
                   alt="Превью проекту"
                   width="370"
@@ -78,7 +87,6 @@
             <li class="item">
               <a href="" class="link-filtr"
                 ><img
-                  class="image"
                   src="./image/proj2.jpg"
                   alt="Превью проекту"
                   width="370"
@@ -93,7 +101,6 @@
             <li class="item">
               <a href="" class="link-filtr"
                 ><img
-                  class="image"
                   src="./image/proj3.jpg"
                   alt="Превью проекту"
                   width="370"
@@ -108,7 +115,6 @@
             <li class="item">
               <a href="" class="link-filtr"
                 ><img
-                  class="image"
                   src="./image/proj4.jpg"
                   alt="Превью проекту"
                   width="370"
@@ -123,7 +129,6 @@
             <li class="item">
               <a href="" class="link-filtr"
                 ><img
-                  class="image"
                   src="./image/proj5.jpg"
                   alt="Превью проекту"
                   width="370"
@@ -138,7 +143,6 @@
             <li class="item">
               <a href="" class="link-filtr"
                 ><img
-                  class="image"
                   src="./image/proj6.jpg"
                   alt="Превью проекту"
                   width="370"
@@ -153,7 +157,6 @@
             <li class="item">
               <a href="" class="link-filtr"
                 ><img
-                  class="image"
                   src="./image/proj7.jpg"
                   alt="Превью проекту"
                   width="370"
@@ -168,7 +171,6 @@
             <li class="item">
               <a href="" class="link-filtr"
                 ><img
-                  class="image"
                   src="./image/proj8.jpg"
                   alt="Превью проекту"
                   width="370"
@@ -183,7 +185,6 @@
             <li class="item">
               <a href="" class="link-filtr"
                 ><img
-                  class="image"
                   src="./image/proj9.jpg"
                   alt="Превью проекту"
                   width="370"
