--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
             ><span class="accent">Web</span>Studio</a
           >
 
-          <ul class="site-nav">
+          <ul class="site-nav lists">
             <li><a href="" class="link current">Студія</a></li>
             <li><a href="./portfolio.html" class="link-nav">Портфоліо</a></li>
             <li><a href="" class="link-nav">Контакти</a></li>
           </ul>
         </nav>
 
-        <ul class="contacts">
+        <ul class="contacts lists">
           <li>
             <a href="mailto:info@devstudio.com" class="connect"
               >info@devstudio.com</a
@@ -54,28 +54,28 @@
       <section class="section-features">
         <div class="container">
           <h2 class="visually-hidden">Переваги</h2>
-          <ul class="features-list">
-            <li class="list">
+          <ul class="features-list lists">
+            <li>
               <h3 class="featurs-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="featurs-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li class="list">
+            <li>
               <h3 class="featurs-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="featurs-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li class="list">
+            <li>
               <h3 class="featurs-title">ПЛАНУВАННЯ</h3>
               <p class="featurs-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="list">
+            <li>
               <h3 class="featurs-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="featurs-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -90,7 +90,7 @@
         <div class="container">
           <h2 class="skill-title">Чим ми займаємося</h2>
 
-          <ul class="section-icon">
+          <ul class="section-icon lists">
             <li>
               <img src="./image/img.jpg" alt="image" width="370" height="294" />
             </li>
@@ -117,8 +117,8 @@
       <section class="section-team">
         <div class="container">
           <h2 class="section-team-title">Наша команда</h2>
-          <ul class="list-team">
-            <li class="list">
+          <ul class="list-team lists">
+            <li>
               <img
                 src="./image/person.jpg"
                 alt="Designer"
@@ -130,7 +130,7 @@
                 <p class="profession">Product Designer</p>
               </div>
             </li>
-            <li class="list">
+            <li>
               <img
                 src="./image/person1.jpg"
                 alt="Developer"
@@ -142,7 +142,7 @@
                 <p class="profession">Frontend Developer</p>
               </div>
             </li>
-            <li class="list">
+            <li>
               <img
                 src="./image/person2.jpg"
                 alt="Marketing"
@@ -154,7 +154,7 @@
                 <p class="profession">Marketing</p>
               </div>
             </li>
-            <li class="list">
+            <li>
               <img
                 src="./image/person3.jpg"
                 alt="UiDesigner"
