--- a/portfolio.html
+++ b/portfolio.html
@@ -25,14 +25,14 @@
             ><span class="accent">Web</span>Studio</a
           >
 
-          <ul class="site-nav">
+          <ul class="site-nav lists">
             <li><a href="./index.html" class="link-nav">Студія</a></li>
             <li><a href="" class="link current">Портфоліо</a></li>
             <li><a href="" class="link-nav">Контакти</a></li>
           </ul>
         </nav>
 
-        <ul class="contacts">
+        <ul class="contacts lists">
           <li>
             <a href="mailto:info@devstudio.com" class="connect"
               >info@devstudio.com</a
@@ -69,7 +69,7 @@
         </div>
 
         <div class="container">
-          <ul class="filtr-works">
+          <ul class="filtr-works lists">
             <li class="item">
               <a href="" class="link-filtr"
                 ><img
