--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
 
     <main>
       <section class="section-hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="hero-btn">Замовити послугу</button>
+        <div class="container">
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <button type="button" class="hero-btn">Замовити послугу</button>
+        </div>  
       </section>
 
       <section class="section-features">
