--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ class="list-decoration"<!DOCTYPE html>
 <html lang="uk">
   <head>
     <meta charset="UTF-8" />
@@ -57,27 +57,27 @@
         <div class="container">
           <h2 class="visually-hidden">Переваги</h2>
           <ul class="features-list lists">
-            <li>
+            <li class="list-decoration">
               <h3 class="featurs-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="featurs-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li>
+            <li class="list-decoration">
               <h3 class="featurs-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="featurs-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li>
+            <li class="list-decoration">
               <h3 class="featurs-title">ПЛАНУВАННЯ</h3>
               <p class="featurs-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li class="list-decoration">
               <h3 class="featurs-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="featurs-text">
                 Значимість цих проблем настільки очевидна, що реалізація
