--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- class="list-decoration"<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="uk">
   <head>
     <meta charset="UTF-8" />
@@ -47,7 +47,7 @@
 
     <main>
       <section class="section-hero">
-        <div class="container">
+        <div class="container-hero">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero-btn">Замовити послугу</button>
         </div>
