--- a/index.html
+++ b/index.html
@@ -171,6 +171,44 @@
           </ul>
         </div>
       </section>
+
+      <section class="section-clients">
+        <div class="container">
+          <h2 class="clients-title">Постійні клієнти</h2>
+          <ul class="list-clients lists">
+            <li class="list-company"><a href="" class="link-clients">
+              <svg class="clients-logo">
+                <use href="./image/symbol-defs.svg#icon-Logo-1"></use>
+              </svg>
+            </a></li>
+            <li class="list-company"><a href="" class="link-clients">
+              <svg class="clients-logo">
+                <use href="./image/symbol-defs.svg#icon-Logo-2"></use>
+              </svg>
+            </a></li>
+            <li class="list-company"><a href="" class="link-clients">
+              <svg class="clients-logo">
+                <use href="./image/symbol-defs.svg#icon-Logo-3"></use>
+              </svg>
+            </a></li>
+            <li class="list-company"><a href="" class="link-clients">
+              <svg class="clients-logo">
+                <use href="./image/symbol-defs.svg#icon-Logo-4"></use>
+              </svg>
+            </a></li>
+            <li class="list-company"><a href="" class="link-clients">
+              <svg class="clients-logo">
+                <use href="./image/symbol-defs.svg#icon-Logo-5"></use>
+              </svg>
+            </a></li>
+            <li class="list-company"><a href="" class="link-clients">
+              <svg class="clients-logo">
+                <use href="./image/symbol-defs.svg#icon-Logo-6"></use>
+              </svg>
+            </a></li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
