Додав лінки в секцію команди

--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
           <h2 class="visually-hidden">Переваги</h2>
           <ul class="features-list lists">
             <li class="list-decoration">
+              <div class="icons">
+                <svg class="features-logo">
+                  <use href="./image/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="featurs-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="featurs-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -65,6 +70,11 @@
               </p>
             </li>
             <li class="list-decoration">
+              <div class="icons">
+                <svg class="features-logo">
+                  <use href="./image/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="featurs-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="featurs-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -72,12 +82,22 @@
               </p>
             </li>
             <li class="list-decoration">
+              <div class="icons">
+                <svg class="features-logo">
+                  <use href="./image/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="featurs-title">ПЛАНУВАННЯ</h3>
               <p class="featurs-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="list-decoration">
+              <div class="icons">
+                <svg class="features-logo">
+                  <use href="./image/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="featurs-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="featurs-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -120,7 +140,7 @@
         <div class="container">
           <h2 class="section-team-title">Наша команда</h2>
           <ul class="list-team lists">
-            <li>
+            <li class="item-team">
               <img
                 src="./image/person.jpg"
                 alt="Designer"
@@ -130,9 +150,41 @@
               <div class="team-text">
                 <h3 class="title-team">Ігор Дем'яненко</h3>
                 <p class="profession">Product Designer</p>
+                <ul class="list-social lists">
+                  <li class="social-item">
+                    <a href="" class="link-social">
+                      <svg class="social-logo" width="20" height="20">
+                        <use
+                          href="./image/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link-social">
+                      <svg class="social-logo" width="20" height="20">
+                        <use href="./image/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link-social">
+                      <svg class="social-logo" width="20" height="20">
+                        <use href="./image/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link-social">
+                      <svg class="social-logo" width="20" height="20">
+                        <use href="./image/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
-            <li>
+            <li class="item-team">
               <img
                 src="./image/person1.jpg"
                 alt="Developer"
@@ -142,9 +194,41 @@
               <div class="team-text">
                 <h3 class="title-team">Ольга Рєпіна</h3>
                 <p class="profession">Frontend Developer</p>
+                <ul class="list-social lists">
+                  <li class="social-item">
+                    <a href="" class="link-social">
+                      <svg class="social-logo" width="20" height="20">
+                        <use
+                          href="./image/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link-social">
+                      <svg class="social-logo" width="20" height="20">
+                        <use href="./image/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link-social">
+                      <svg class="social-logo" width="20" height="20">
+                        <use href="./image/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link-social">
+                      <svg class="social-logo" width="20" height="20">
+                        <use href="./image/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
-            <li>
+            <li class="item-team">
               <img
                 src="./image/person2.jpg"
                 alt="Marketing"
@@ -154,9 +238,41 @@
               <div class="team-text">
                 <h3 class="title-team">Микола Тарасов</h3>
                 <p class="profession">Marketing</p>
+                <ul class="list-social lists">
+                  <li class="social-item">
+                    <a href="" class="link-social">
+                      <svg class="social-logo" width="20" height="20">
+                        <use
+                          href="./image/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link-social">
+                      <svg class="social-logo" width="20" height="20">
+                        <use href="./image/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link-social">
+                      <svg class="social-logo" width="20" height="20">
+                        <use href="./image/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link-social">
+                      <svg class="social-logo" width="20" height="20">
+                        <use href="./image/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
-            <li>
+            <li class="item-team">
               <img
                 src="./image/person3.jpg"
                 alt="UiDesigner"
@@ -166,6 +282,38 @@
               <div class="team-text">
                 <h3 class="title-team">Михайло Єрмаков</h3>
                 <p class="profession">UI Designer</p>
+                <ul class="list-social lists">
+                  <li class="social-item">
+                    <a href="" class="link-social">
+                      <svg class="social-logo" width="20" height="20">
+                        <use
+                          href="./image/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link-social">
+                      <svg class="social-logo" width="20" height="20">
+                        <use href="./image/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link-social">
+                      <svg class="social-logo" width="20" height="20">
+                        <use href="./image/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="link-social">
+                      <svg class="social-logo" width="20" height="20">
+                        <use href="./image/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -176,36 +324,48 @@
         <div class="container">
           <h2 class="clients-title">Постійні клієнти</h2>
           <ul class="list-clients lists">
-            <li class="list-company"><a href="" class="link-clients">
-              <svg class="clients-logo">
-                <use href="./image/symbol-defs.svg#icon-Logo-1"></use>
-              </svg>
-            </a></li>
-            <li class="list-company"><a href="" class="link-clients">
-              <svg class="clients-logo">
-                <use href="./image/symbol-defs.svg#icon-Logo-2"></use>
-              </svg>
-            </a></li>
-            <li class="list-company"><a href="" class="link-clients">
-              <svg class="clients-logo">
-                <use href="./image/symbol-defs.svg#icon-Logo-3"></use>
-              </svg>
-            </a></li>
-            <li class="list-company"><a href="" class="link-clients">
-              <svg class="clients-logo">
-                <use href="./image/symbol-defs.svg#icon-Logo-4"></use>
-              </svg>
-            </a></li>
-            <li class="list-company"><a href="" class="link-clients">
-              <svg class="clients-logo">
-                <use href="./image/symbol-defs.svg#icon-Logo-5"></use>
-              </svg>
-            </a></li>
-            <li class="list-company"><a href="" class="link-clients">
-              <svg class="clients-logo">
-                <use href="./image/symbol-defs.svg#icon-Logo-6"></use>
-              </svg>
-            </a></li>
+            <li class="list-company">
+              <a href="" class="link-clients">
+                <svg class="clients-logo">
+                  <use href="./image/symbol-defs.svg#icon-Logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="list-company">
+              <a href="" class="link-clients">
+                <svg class="clients-logo">
+                  <use href="./image/symbol-defs.svg#icon-Logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="list-company">
+              <a href="" class="link-clients">
+                <svg class="clients-logo">
+                  <use href="./image/symbol-defs.svg#icon-Logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="list-company">
+              <a href="" class="link-clients">
+                <svg class="clients-logo">
+                  <use href="./image/symbol-defs.svg#icon-Logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="list-company">
+              <a href="" class="link-clients">
+                <svg class="clients-logo">
+                  <use href="./image/symbol-defs.svg#icon-Logo-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="list-company">
+              <a href="" class="link-clients">
+                <svg class="clients-logo">
+                  <use href="./image/symbol-defs.svg#icon-Logo-6"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </section>
