--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <ul class="features-list lists">
             <li class="list-decoration">
               <div class="icons">
-                <svg class="features-logo">
+                <svg width="70" height="70">
                   <use href="./image/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -71,7 +71,7 @@
             </li>
             <li class="list-decoration">
               <div class="icons">
-                <svg class="features-logo">
+                <svg width="70" height="70">
                   <use href="./image/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -83,7 +83,7 @@
             </li>
             <li class="list-decoration">
               <div class="icons">
-                <svg class="features-logo">
+                <svg width="70" height="70">
                   <use href="./image/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -94,7 +94,7 @@
             </li>
             <li class="list-decoration">
               <div class="icons">
-                <svg class="features-logo">
+                <svg width="70" height="70">
                   <use href="./image/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
               </div>
