--- a/index.html
+++ b/index.html
@@ -326,42 +326,42 @@
           <ul class="list-clients lists">
             <li class="list-company">
               <a href="" class="link-clients">
-                <svg class="clients-logo">
+                <svg width="106" height="60">
                   <use href="./image/symbol-defs.svg#icon-Logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="list-company">
               <a href="" class="link-clients">
-                <svg class="clients-logo">
+                <svg width="106" height="60">
                   <use href="./image/symbol-defs.svg#icon-Logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="list-company">
               <a href="" class="link-clients">
-                <svg class="clients-logo">
+                <svg width="106" height="60">
                   <use href="./image/symbol-defs.svg#icon-Logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="list-company">
               <a href="" class="link-clients">
-                <svg class="clients-logo">
+                <svg width="106" height="60">
                   <use href="./image/symbol-defs.svg#icon-Logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="list-company">
               <a href="" class="link-clients">
-                <svg class="clients-logo">
+                <svg width="106" height="60">
                   <use href="./image/symbol-defs.svg#icon-Logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="list-company">
               <a href="" class="link-clients">
-                <svg class="clients-logo">
+                <svg width="106" height="60">
                   <use href="./image/symbol-defs.svg#icon-Logo-6"></use>
                 </svg>
               </a>
