Зробив секцію Скіли

--- a/index.html
+++ b/index.html
@@ -113,14 +113,23 @@
         <h2 class="skill-title">Чим ми займаємося</h2>
 
         <ul class="section-icon lists">
-          <li>
+          <li class="skill-icon">
             <img src="./image/img2.jpg" alt="image" width="370" height="294" />
+            <div class="label-container">
+              <p class="label">Десктопні додатки</p>
+            </div>
           </li>
-          <li>
+          <li class="skill-icon">
             <img src="./image/img1.jpg" alt="image" width="370" height="294" />
+            <div class="label-container">
+              <p class="label">Мобільні додатки</p>
+            </div>
           </li>
-          <li>
+          <li class="skill-icon">
             <img src="./image/img.jpg" alt="image" width="370" height="294" />
+            <div class="label-container">
+              <p class="label">Дизайнерські рішення</p>
+            </div>
           </li>
         </ul>
       </div>
@@ -388,4 +397,5 @@
     </div>
   </footer>
 </body>
+
 </html>
