--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,10 @@
         </ul>
         <ul class="filtr-works lists">
           <li class="item">
-            <a href="" class="link-filtr"><img src="./image/proj1.jpg" alt="Превью проекту" width="370" height="294" />
+            <a href="" class="link-filtr"><img class="project-logo" src="./image/proj1.jpg" alt="Превью проекту" width="370" height="294" />
+              <div class="container-description">
+                <p class="description">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="filtr-item">
                 <h2 class="filtr-title">Технокряк</h2>
                 <p class="filtr-text">Веб-сайт</p>
